Fixing journaling music collapse color

--- a/site/assets/css/callouts.css
+++ b/site/assets/css/callouts.css
@@ -54,7 +54,7 @@
     --co-border: #6c757d;
 }
 .callout-info {
-    --co-border: #0d6efd;
+    --co-border: #ffa500;
 }
 .callout-tip,
 .callout-success {
